Split viewer model into :viewer-core and abstract HTTP behind HttpFetcher
Milestone 0 of the Android viewer design: everything :view and the
coming :android app share now lives in :viewer-core (AppState, TileCache,
ViewerConfig, tile prefetch/placement, the inspect panel text,
placeholders) with no terminal dependency. :lib's HttpTileSource takes an
HttpFetcher so Android can supply one without java.net.http; PmTilesSource
can open an already open FileChannel; List.getFirst/getLast are gone from
the shared modules. settings.gradle includes :android only when an SDK is
present or -Pandroid is given.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>